# complex-bazel-setup

./: .cargo-runner.env  .cargo-runner.json  .gitignore  BAZEL_RUST_GUIDE.md  BUILD.bazel  MODULE.bazel  README.md  build-ra.sh  rust-project.json
combos/: .cargo-runner.json  BUILD.bazel
combos/backend/: .cargo-runner.json  .gitignore  BUILD.bazel
combos/frontend/: .cargo-runner.json  BUILD.bazel
combos/frontend/src/: main.rs
corex/: .cargo-runner.json  BUILD.bazel  Cargo.toml
corex/src/: lib.rs
server/: .cargo-runner.json  BUILD.bazel  Cargo.toml  build.rs
server/benches/: fibonacci_benchmark.rs
server/examples/: axum.rs
server/src/: main.rs
server/tests/: just_test.rs
